--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,47 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.sharingapples.java</groupId>
-    <artifactId>store-jdbc</artifactId>
-    <version>0.1.0</version>
+  <groupId>com.sharingapples.java</groupId>
+  <artifactId>store-jdbc</artifactId>
+  <version>0.1.0</version>
 
-    <dependencies>
-      <dependency>
-        <groupId>com.sharingapples.java</groupId>
-        <artifactId>sync-state</artifactId>
-        <version>0.2.0</version>
-      </dependency>
-    </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+  <dependencies>
+    <!-- JUnit Test -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.8.7</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- Test Dependencies End -->
+
+
+    <dependency>
+      <groupId>com.sharingapples.java</groupId>
+      <artifactId>sync-state</artifactId>
+      <version>0.2.0</version>
+    </dependency>
+  </dependencies>
 </project>
