added apache commons-dbcp2 for connection pooling

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
     </dependency>
     <!-- Test Dependencies End -->
 
+    <!-- Apache DBCP library required for connection pooling -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.1</version>
+    </dependency>
 
     <dependency>
       <groupId>com.sharingapples.java</groupId>
